syntax = "proto3";

option csharp_namespace = "Server";

package greet;

service LoginHandler {
  rpc Login (Credentials) returns (Access);
}

message Credentials {
  string username = 1;
  string password = 2;
}

message Access {
  bool loggedIn = 1;
}
